<resources>
    <string name="app_name">钱掌柜零售</string>

    <string name="login">登录</string>
    <string name="user_login">用户登录</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_password">请输入用户密码</string>

    <string name="logout">注销</string>
    <string name="login_clear">清除</string>

    <string name="diablo_production_server">http://120.24.39.174/</string>

    <string name="invalid_name_password">用户名或密码错误</string>
    <string name="login_user_active">该用户已登录系统，是否继续登录？</string>
    <string name="login_exceed_user">超过在线最大用户数限制，是否强制登录？注意：系统将踢出未在线时间最长用户</string>
    <string name="login_no_user_fire">没有用户可以踢出！！注意：管理员用户无法踢出，请确认管理员是否在线</string>
    <string name="login_out_of_service">用户不在服务时间内，请选择其它用户或在服务时间内登录该用户</string>

    <string name="network_unreachable">连接服务器失败，请确认该设备网络连接正常</string>
    <string name="network_invalid">网络故障，请检查网络连接情况，如网络正常，请注销该用户后重新登录</string>
    <string name="internal_error">系统内部错误，请重试或联系服务人员</string>
    <string name="authen_error">操作鉴权失败</string>
    <string name="database_error">数据库操作失败，请重试或联系服务人员</string>

    <string name="btn_loading">等待</string>
    <string name="login_ok">确认</string>
    <string name="login_cancel">取消</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
</resources>
