<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

  <LinearLayout
      android:id="@+id/login_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10sp"
      android:padding="10dp"
      android:weightSum="2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:theme="@style/LoginTextLabel">
      <android.support.design.widget.TextInputEditText
          android:id="@+id/login_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_name"
          android:inputType="text"
          android:selectAllOnFocus="true"
          android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
  </LinearLayout>


  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:theme="@style/LoginTextLabel">
      <android.support.design.widget.TextInputEditText
          android:id="@+id/login_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_password"
          android:inputType="textPassword"
          android:selectAllOnFocus="true"
          android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
  </LinearLayout>

  <!--<LinearLayout android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="5sp"-->
                <!--android:layout_marginEnd="5sp">-->
    <!--<Spinner-->
        <!--android:id="@+id/spinner_select_server"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--style="@style/Widget.AppCompat.Spinner.Underlined"-->
        <!--android:text="@string/login"/>-->
  <!--</LinearLayout>-->

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:orientation="horizontal"
                android:layout_marginEnd="5sp">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_clear_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/white"
        app:bootstrapBrand="danger"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/login_clear"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/white"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/login"/>
  </LinearLayout>

</LinearLayout>
